--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,8 +8,11 @@
     "@devexpress/dx-react-grid-material-ui": "^2.0.5",
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@terrestris/react-geo": "^11.4.4",
     "axios": "^0.19.0",
     "material-table": "^1.50.0",
+    "ol": "^6.1.1",
+    "qs": "^6.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-loading": "^2.0.3",
